# cmd/server/main.go
@@ -1,18 +1,15 @@
 package main
 
 import (
-	"fmt"
 	"log"
 	"net"
 	"os"
 
 	"github.com/gin-gonic/gin"
-	"github.com/google/uuid"
 	_ "github.com/logservice/docs"
 	pb "github.com/logservice/github.com/logservice/pkg/proto"
 	grpcServer "github.com/logservice/internal/grpc"
 	"github.com/logservice/internal/handler"
-	"github.com/logservice/internal/model"
 	"github.com/logservice/internal/repo"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
@@ -66,21 +63,16 @@ func main() {
 		}
 	}()
 
-	user := model.User {
-		ID:       uuid.New(), // make sure uuid is imported
-		Username: "akshay",
-		Role:     "admin",
-	}
-	access, _ := repo.GenerateAccessToken(user)
-	refresh, _ := repo.GenerateRefreshToken(user)
-
-	fmt.Println("Access:", access)
-	fmt.Println("Refresh:", refresh)
-
 	r.POST("/logs", logHandler.CreateLogs)
 	r.POST("/logs/batch", logHandler.CreateLogsBatch)
 	r.GET("/logs/search", logHandler.SearchLogs)
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+
+	userRepo := logRepo
+	authHandler := handler.NewAuthHandler(userRepo)
+	r.POST("/auth/register", authHandler.Register)
+	r.POST("/auth/login", authHandler.Login)
+	r.POST("/auth/refresh", authHandler.Refresh)
 
 	// 4. Start server
 	if err := r.Run(":8080"); err != nil {
